--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <a href="#" data-filesjs="img1.png" style="font-size: 700px;">X</a>
+    <a href="#" data-filesjs="LT_286.pdf" style="font-size: 700px;">X</a>
     <a href="#" data-filesjs="img2.png" style="font-size: 700px;">X</a>
 
 </body>
