--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </style>
 </head>
 <body>
-    <a href="#" data-filesjs="LT_286.pdf" style="font-size: 700px;">X</a>
-    <a href="#" data-filesjs="img2.png" style="font-size: 700px;">X</a>
+    <a href="#" data-filesjs="./files/YOUNG_MULTI.mp3" style="font-size: 700px;">X</a>
+    <a href="#" data-filesjs="./files/YFL.mp4" style="font-size: 700px;">X</a>
 
 </body>
 <script src="./index.js"></script>
