--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <style>
         body{
             background-color: #303030;
-            color: #d3d3d3;
+            
         }
+
     </style>
 </head>
 <body>
-    <a href="#" data-filesjs="./files/YOUNG_MULTI.mp3" style="font-size: 700px;">X</a>
-    <a href="#" data-filesjs="./files/YFL.mp4" style="font-size: 700px;">X</a>
+    <a href="#" data-filesjs="./files/Excel2.xlsx">X</a>
+    <a href="#" data-filesjs="./files/Excel_funkcje.xlsx">X</a>
+    <a href="#" data-filesjs="./files/LT_286.pdf">X</a>
+    <a href="#" data-filesjs="./files/x.html">X</a>
+    <a href="#" data-filesjs="./files/egzamin.sql">X</a>
+    <a href="#" data-filesjs="./files/HeadDataBase.jar">X</a>
+    <a href="#" data-filesjs="./files/YOUNG_MULTI.mp3">X</a>
+    <a href="#" data-filesjs="./files/YFL.mp4">X</a>
+    <a href="#" data-filesjs="./files/img1.png">X</a>
 
 </body>
 <script src="./index.js"></script>
