--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     </style>
 </head>
 <body>
+    <a href="#" data-filesjs="./files/do.docx">X</a>
     <a href="#" data-filesjs="./files/Excel2.xlsx">X</a>
     <a href="#" data-filesjs="./files/Excel_funkcje.xlsx">X</a>
     <a href="#" data-filesjs="./files/LT_286.pdf">X</a>
     <a href="#" data-filesjs="./files/x.html">X</a>
     <a href="#" data-filesjs="./files/egzamin.sql">X</a>
-    <a href="#" data-filesjs="./files/HeadDataBase.jar">X</a>
-    <a href="#" data-filesjs="./files/YOUNG_MULTI.mp3">X</a>
-    <a href="#" data-filesjs="./files/YFL.mp4">X</a>
+    <a href="#" data-filesjs="./files/plugin.jar">X</a>
+    <a href="#" data-filesjs="./files/music.mp3">X</a>
+    <a href="#" data-filesjs="./files/film.mp4">X</a>
     <a href="#" data-filesjs="./files/img1.png">X</a>
 
 </body>
