--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
             
         }
 
+
     </style>
 </head>
 <body>
+    <a href="#" data-filesjs="./files/test.doc">X</a>
     <a href="#" data-filesjs="./files/do.docx">X</a>
     <a href="#" data-filesjs="./files/Excel2.xlsx">X</a>
-    <a href="#" data-filesjs="./files/Excel_funkcje.xlsx">X</a>
     <a href="#" data-filesjs="./files/LT_286.pdf">X</a>
     <a href="#" data-filesjs="./files/x.html">X</a>
     <a href="#" data-filesjs="./files/egzamin.sql">X</a>
