--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <a href="#" data-filesjs="./files/img1.png">X</a>
 
 </body>
-<script src="https://cdn.jsdelivr.net/gh/Mikolaj0524/FilesJS@master/index.js"></script>
+<script src="./index.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/gh/Mikolaj0524/FilesJS@master/index.js"></script> -->
 </html>
